Fixed vertical spacing on dock icons;  Addresses FLX-13.

--- a/public/fluxx_engine/theme/_common/sass/style.sass
+++ b/public/fluxx_engine/theme/_common/sass/style.sass
@@ -199,6 +199,8 @@ input,select,textarea
       height: $icon_dimension
       width:  $icon_dimension
       margin: $icon_margin_top 10px $icon_margin_bottom 10px
+      &:first-of-type
+        margin-left: 15px
       .label
         +ellipsis
         text-transform: uppercase
